--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.0",
     "moment": "^2.29.1",
     "mongoose": "^6.0.12"
   },
