--- a/server/package.json
+++ b/server/package.json
@@ -5,16 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "2.4.3",
+    "connect-mongo": "4.6.0",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
+    "dotenv": "14.2.0",
     "express": "^4.17.1",
+    "express-session": "1.17.2",
     "firebase-admin": "^10.0.0",
     "moment": "^2.29.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "passport": "0.5.2",
+    "passport-local": "1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
