--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^10.0.0",
     "moment": "^2.29.1",
     "mongoose": "^6.0.12",
+    "nodemailer": "6.7.2",
     "passport": "0.5.2",
     "passport-local": "1.0.0"
   },
