--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^6.0.12",
     "nodemailer": "6.7.2",
     "passport": "0.5.2",
-    "passport-local": "1.0.0"
+    "passport-local": "1.0.0",
+    "twilio": "^3.73.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
